[package]
name = "intersect"
version = "0.1.0"
authors = ["Michal Siedlaczek <michal.siedlaczek@nyu.edu>"]
edition = "2018"

[lib]
name = "intersect"

[dependencies]
num = "0.2"
failure = "0.1"
ordered-float = "1.0"

[dev-dependencies]
criterion = "0.3"
proptest = "0.9"

[[bench]]
name = "bench"
harness = false
