[package]
name = "intersect"
version = "0.1.0"
authors = ["Michal Siedlaczek <michal.siedlaczek@nyu.edu>"]
edition = "2018"

[lib]
name = "intersect"

[dependencies]
num = "0.2"
failure = "0.1"
ordered-float = "1.0"
serde = { version = "1.0", optional = true, features = ["derive"] }
itertools = "0.8"

[dev-dependencies]
criterion = "0.3"
proptest = "0.9"
rstest = "0.3"

[[bench]]
name = "bench"
harness = false
