[package]
name = "intersect"
version = "0.1.0"
authors = ["Michal Siedlaczek <michal.siedlaczek@nyu.edu>"]
edition = "2018"

[lib]
name = "intersect"

[[bin]]
name = "intersect"
path = "src/main.rs"

[[bin]]
name = "test-precision"
path = "src/test_precision.rs"

[dependencies]
num = "0.2"
failure = "0.1"
ordered-float = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.8"
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1"
bit-set = "0.5"
rand = "0.7"
rand_chacha = "0.2"
fixedbitset = "0.2"

[dev-dependencies]
criterion = "0.3"
proptest = "0.9"
rstest = "0.3"
tempdir = "0.3"

[[bench]]
name = "bench"
harness = false
